2008-08-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R: Introduce name abbreviations for weighting functions.

2008-07-24  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R (.onLoad, .Last): Start and stop MPI cluster.

	* R/cluster.R: Provide convenience functions for using a MPI
	cluster.

	* R/termdocmatrix.R (TermDocMatrix): Use MPI cluster if
	available.

	* R/textdoccol.R (tmIndex, tmFilter, tmMap): Use MPI cluster if
	available.

2008-07-17  Ingo Feinerer  <feinerer@logic.at>

	* R/textdoccol.R (lapply): Removed debug print out.

2008-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readRCV1): Improved meta data extraction from
	Reuters Corpus Volume 1 documents.

2008-05-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/transform.R: Ensure that all mappings preserve multiline
	structures.

2008-05-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/filter.R: Every filter has now an attribute indicating whether
	it sould be applied to document level (doclevel).

	* R/textdoccol.R (tmFilter): Set searchFullText as new default
	filter.

2008-04-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/transform.R (replacePatterns): Replaced removeWords by
	replacePatterns. Suggested by Christian Buchta.

	* R/textdoccol.R (inspect): Improved formatting.

2008-04-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/CITATION: Updated JSS article information.

	* R/textdoccol.R (setAs): Added coerce method from list to
	corpus.

	* R/meta.R (meta): Improved meta data handling.

2008-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (materialize, tmMap): Improvements suggested by
	Christian Buchta.

	* inst/CITATION: Added template to include JSS article reference.

2008-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (tmMap): Introduced lazy mapping.

	* R/source.R: Added VectorSource.

2008-02-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Language codes should be in ISO 639-1 format.
